<resources>
    <string name="app_name">  Traffic Number Plate  </string>
    <string name="menu">menu</string>
    <string name="search">search</string>
    <string name="home">Main</string>
    <string name="mytool">My Tool</string>
    <string name="ToolNameHint"> Write Tool Name</string>

    <string name="ToolPriceHint"> Enter Price  </string>

    <string name="ToolDescHint">  Tool Description</string>
    <string name="ToolType"> Tool Type </string>
    <string name="AddTool">Add</string>
    <string name="AddImages"> Add Images  </string>
    <string name="UserName">   Enter User Name  </string>
    <string name="AddPassword">  Enter Password </string>
    <string name="Login"> Login  </string>
    <string name="NewUser"> New User  </string>
    <string name="Email"> Enter Email</string>
    <string name="PhoneNumber">    Enter Phone Number</string>
    <string name="back">Back</string>
    <string name="AddForsell">    Add Tool For selling</string>
    <string name="AddNewUser"> Add new user</string>
    <string name="OffersNews">  Last Offers</string>
    <string name="no_search_result">  no search result   </string>
    <string name="nonetworkConnection"> No internet connection    </string>
    <string name="Emailu">  Email  </string>
    <string name="PhoneNumberu">   Phone number</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Google map key</string>
    <string name="AddNewTool">Add Offer</string>
    <string name="MsgDonothaveOffers"> You didnot post any offer</string>
    <string name="RemoveOffer">  Remove Offer</string>
    <string name="RepeatPassword">      Confirm Password </string>
    <string name="alerts">  Search Area</string>
    <string name="callus"> Call us  </string>
    <string name="separeteapp">  Share the App</string>
    <string name="rateapp">Rate the APP  </string>

    <string name="generldepartment"> Main debarment  </string>

    <string name="action_settings">Settings</string>
    <string name="sharemessage">Awesome App helps me to sell my tool i want to share it with you</string>
    <string name="GpsDistable">your GPS is Off you have to  run it before complete this process  </string>

    <string name="gpsoff"> GPS is off run it please then try again</string>
    <string name="offerdetails">Offer Details</string>
    <string name="addUser">Save </string>
    <string name="AddAllinfo">Enter All information</string>
    <string name="PasswordNotCorrect">Password does not match</string>
    <string name="EmailNotCorrect">Email is not correct</string>
    <string name="ClickToAddImages">Click  on picture to load your images  </string>
    <string name="OwnerLives">Tool  Owner is lining in this area </string>
    <string name="AddImagesPlease"> Add one image at least please</string>
    <string name="Catgeory">Departments</string>
    <string name="Pop_ad_unit_id">ads key</string>
    <string name="name">name</string>
    <string name="id">id</string>
    <string name="camera">Camer</string>
    <string name="add">ADD</string>
    <string name="show_all">Show All</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="addInfraction">Add Infrac</string>
    <string name="todo">TODO</string>
    <string name="NameInfraction">Enter name of infraction</string>
    <string name="infractionDesc">Infraction Description</string>
    <string name="StreatName">Streat name</string>
    <string name="CityName">City</string>
    <string name="NumberInfraction">Number</string>
    <string name="CIDforIfraction">Client ID</string>
    <string name="enter_the_plate_number_and_the_infraction_number_that_you_need_delete_it">enter the infraction number that you need deleted it..</string>
    <string name="croping">Cropping</string>
    <string name="t_t_t_t_tcapture_the_number_plate_from_n_t_t_t_t_t_t_t_t_t_t_t_t_t_tcar">Capture the number plate from car</string>
    <string name="login_btn_label">LOGIN</string>
    <string name="get_started_btn_label">Get Statring</string>
    <!--Welcome messages-->
    <string name="splash_welcome_txt">\t\t\t\t\tEasiest way to\n\t\tFind the Car Infraction</string>
    <!--Button labels-->
    <string name="i_m_client">I\'m Client ☺</string>
    <string name="i_m_officer">I\'m Officer ☺♥☺</string>

    <string name="who_are_you">Who are you ?</string>
    <string name="Fname">Frist name</string>
    <string name="Lname">Last name</string>
</resources>
