<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.tomas.androidgraduationproject.CameraActivity"
    android:background="@drawable/new_login_shape"
    android:orientation="vertical">

    <Button
        android:id="@+id/camera"
        android:layout_width="148dp"
        android:layout_height="52dp"
        android:layout_margin="100dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/new_login_shape"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gallery"
        android:layout_width="155dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/new_login_shape"
        android:text="@string/croping"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera"
        app:layout_constraintVertical_bias="0.459" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="268dp"
        android:text="@string/t_t_t_t_tcapture_the_number_plate_from_n_t_t_t_t_t_t_t_t_t_t_t_t_t_tcar"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="UnknownId" />

</android.support.constraint.ConstraintLayout>


