<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textDirection="rtl"
    android:background="@drawable/new_login_shape"
    tools:context="com.example.tomas.androidgraduationproject.MessagesClientActivity">

    <LinearLayout
        android:textDirection="rtl"
        android:background="@drawable/new_login_shape"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:divider="@drawable/new_login_shape"
            android:background="@drawable/new_login_shape"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/LVNews"
            android:dividerHeight="2dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/whiteback"
            android:layout_weight="0"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/delete"
                android:id="@+id/button2"
                android:drawableEnd="@drawable/newsa1"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:onClick="btnDelete"
                android:textSize="12sp"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:background="@color/whiteback" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/addInfraction"
                android:id="@+id/bulogotype"
                android:drawableEnd="@drawable/add1"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:onClick="buAddInf"
                android:textSize="12sp"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:background="@color/whiteback" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/home"
                android:id="@+id/buhome"
                android:drawablePadding="8dp"
                android:drawableEnd="@drawable/home1"
                android:layout_weight="1"
                android:onClick="bunhomepage"
                android:textSize="12sp"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:background="@color/whiteback" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
