<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textDirection="rtl"
    android:background="@drawable/new_login_shape"
    tools:context="com.example.tomas.androidgraduationproject.AddInfractionActivity">
    <ScrollView
        android:background="@drawable/new_login_shape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">



        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/cover"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LLogin"
                android:layout_marginTop="7dp"
                android:paddingLeft="4dp"
                android:paddingTop="4dp">




                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:touchscreenBlocksFocus="false"
                    android:layout_marginBottom="2dp">

                    <EditText
                        android:maxLength="35"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/EDTToolName"
                        android:layout_weight="1"
                        android:textColor="#ff1a102c"
                        android:background="@android:drawable/editbox_background"
                        android:textSize="18sp"
                        android:hint="@string/NameInfraction"
                        android:paddingBottom="9dp"
                        android:paddingTop="9dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:touchscreenBlocksFocus="false"
                    android:layout_marginBottom="2dp">

                    <EditText
                        android:inputType="textMultiLine"
                        android:singleLine="false"
                        android:maxLength="400"
                        android:maxLines="4"
                        android:lines="4"
                        android:layout_width="fill_parent"
                        android:layout_height="100dp"
                        android:ems="10"
                        android:id="@+id/EDToolDes"
                        android:layout_weight="1"
                        android:textColor="#ff1a102c"
                        android:background="@android:drawable/editbox_background"
                        android:textSize="18dp"
                        android:hint="@string/infractionDesc"
                        android:paddingBottom="9dp"
                        android:paddingTop="9dp"
                        android:layout_marginBottom="10dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:touchscreenBlocksFocus="false"
                    android:layout_marginBottom="2dp">

                    <EditText
                        android:maxLength="35"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/EDTToolStreat"
                        android:layout_weight="1"
                        android:textColor="#ff1a102c"
                        android:background="@android:drawable/editbox_background"
                        android:textSize="18sp"
                        android:hint="@string/StreatName"
                        android:paddingBottom="9dp"
                        android:paddingTop="9dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:touchscreenBlocksFocus="false"
                    android:layout_marginBottom="2dp">

                    <EditText
                        android:maxLength="35"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/EDTToolCity"
                        android:layout_weight="1"
                        android:textColor="#ff1a102c"
                        android:background="@android:drawable/editbox_background"
                        android:textSize="18sp"
                        android:hint="@string/CityName"
                        android:paddingBottom="9dp"
                        android:paddingTop="9dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="right"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:touchscreenBlocksFocus="false"
                    android:layout_marginBottom="2dp">

                    <EditText
                        android:maxLength="15"
                        android:layout_width="70pt"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/EDTToolPrice"
                        android:layout_weight="1"
                        android:textColor="#ff1a102c"
                        android:background="@android:drawable/editbox_background"
                        android:textSize="18dp"
                        android:hint="@string/ToolPriceHint"
                        android:paddingBottom="9dp"
                        android:paddingTop="9dp"
                        android:layout_marginBottom="10dp"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:touchscreenBlocksFocus="false"
                    android:layout_marginBottom="2dp">

                    <EditText
                        android:maxLength="35"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/EDTToolNumber"
                        android:layout_weight="1"
                        android:textColor="#ff1a102c"
                        android:background="@android:drawable/editbox_background"
                        android:textSize="18sp"
                        android:hint="@string/NumberInfraction"
                        android:paddingBottom="9dp"
                        android:paddingTop="9dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="right"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:touchscreenBlocksFocus="false"
                    android:layout_marginBottom="2dp">

                    <EditText
                        android:maxLength="15"
                        android:layout_width="70pt"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/EDTToolCID"
                        android:layout_weight="1"
                        android:textColor="#ff1a102c"
                        android:background="@android:drawable/editbox_background"
                        android:textSize="18dp"
                        android:hint="@string/CIDforIfraction"
                        android:paddingBottom="9dp"
                        android:paddingTop="9dp"
                        android:layout_marginBottom="10dp"
                        android:inputType="number" />
                </LinearLayout>




                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AddTool"
                    android:drawablePadding="2dp"
                    android:id="@+id/BuSaveSetting"
                    android:background="@drawable/buttonblue"
                    android:drawableRight="@drawable/add"
                    android:layout_marginBottom="10dp"
                    android:textColor="#ff06071c"
                    android:onClick="buAddTool"
                    android:layout_weight="0"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp" />



        </LinearLayout>


        </LinearLayout>


    </ScrollView>
</RelativeLayout>
